# ml_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  kubernates.bash  main.py  pyproject.toml  pytest.ini
app/: __init__.py
app/db/: database.py  models.py
app/flask_api/: controller.py
app/module/: controller.py  helpers.py  logic.py  model_classes.py  models.py  storage.py
app/settings/: base.py  db.py
kube/: ml-service-ip.yaml  ml-service-lb.yaml  ml-service.yaml
kube/postgres/: pg-config.yaml  pg-deploy.yaml  pg-ip-service.yaml  pg-storage.yaml
tests/: test_simple.py
